<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/add_reunion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/add_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/avatar"
                    app:srcCompat="@drawable/ic_circle_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLyt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:hint="@string/meeting_subject"
                        android:inputType="textPersonName"
                        android:maxLength="15"
                        android:textSize="24sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/add_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:hint="@string/meeting_date"
                android:textColor="#101010"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/add_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_domain_black_24dp"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:hint="@string/add_a_meeting_room"
                android:textColor="#101010"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_access_time_black_24dp"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:hint="@string/meeting_time"
                    android:textColor="#101010"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dash"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dash"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/add_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.4"
                    android:clickable="true"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="true"
                    android:hint="@string/add_a_duration"
                    android:textColor="#101010"
                    android:textSize="20sp" />
            </LinearLayout>


            <MultiAutoCompleteTextView
                android:id="@+id/add_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_person_add_black_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/add_participants"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reunionAboutLyt"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reunionSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/about_the_meeting"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:minLines="4" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="#80004D99"
                android:enabled="false"
                android:text="@string/create_reunion"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>